Fix design and limit locale to the 9 officially supported languages of Gwent.
